kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pvz
  labels:
    app.kubernetes.io/part-of: pvz
spec:
  ingressClassName: traefik
  rules:
    - host: replace-me.invalid
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: pvz-backend
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pvz-game
                port:
                  number: 8080
